--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "homepage": "https://github.com/elosiktv/school-project#readme",
   "devDependencies": {
     "browser-sync": "^2.24.7",
-    "gulp": "^3.9.1"
+    "gulp": "^3.9.1",
+    "gulp-sass": "^4.0.1"
   }
 }
